<resources>
    <string name="app_name">Installer Toolbox</string>
    <string name="action_settings">Ajustes</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>

    <string-array name="acciones">
        <item>Parte de horas</item>
        <item>Trabajos pendientes</item>
        <item>Calendario laboral</item>
        <item>Información técnica</item>
        <item>Convenio</item>
    </string-array>

    <string-array name="descripcion_acciones">
        <item>Introduce la información del trabajo realizado</item>
        <item>Apunta los trabajos pendientes de una instalación</item>
        <item>Consulta los días festivos y puentes de este año</item>
        <item>Consulta información técnica relativa a instalaciones</item>
        <item>Consulta el convenio del metal de A Coruña</item>
    </string-array>

    <array name="imagenes_acciones">
        <item>@drawable/parte_horas</item>
        <item>@drawable/trabajos_pendientes</item>
        <item>@drawable/calendario</item>
        <item>@drawable/info_tecnica</item>
        <item>@drawable/convenio</item>
    </array>


    <string name="titulo_acristalamiento">Acristalamiento</string>
    <string name="titulo_metalica">Carp. metálica</string>
    <string name="titulo_pvc">Carp. PVC</string>
    <string name="titulo_persianas">Persianas</string>

    <string name="acristalamiento">Esto es un texto de muestra para el apartado de acristalamiento.</string>
    <string name="carp_metalica">Esto es un texto de muestra para el apartado de carpintería metálica</string>
    <string name="carp_pvc">Esto es un texto de muestra para el apartado de carpintería de PVC</string>
    <string name="persianas">Esto es un texto de muestra para el apartado de persianas eléctricas</string>
    <string name="label_consultar">Consulta los días festivos de tu municipio</string>
    <string name="boton_consultar">Descargar calendario</string>
    <string name="festivos">Descargando...</string>
    <string name="titulo_notify_descarga_calendario">Calendario_2019.pdf</string>
    <string name="estado_notify_descarga_calendario">Descargando...</string>
    <string name="textView_calendario_descargado">Calendario descargado correctamente</string>
    <string name="toast_calendario_descargado">Descarga completada</string>

    <string name="descargando_convenio">Descargando convenio de A Coruña...</string>
    <string name="texto_convenio"><b>CONVENIO COLECTIVO PROVINCIAL PARA LA INDUSTRIA SIDEROMETALÚRGICA DE LA PROVINCIA DE LA CORUÑA 2015-2016-2017-2018 y 2019</b>
        \n\n
        <b>Capítulo 1</b>
        \n\n
        <b>Ámbitos de aplicación</b>
        \n\n
        <b>Artículo 1- Ámbito funcional</b>
        \n\n
        De conformidad con el artículo 2 del II Convenio colectivo estatal de la industria, la tecnología y los servicios del sector del metal (BOE 19/06/2017), el ámbito funcional del Sector del Metal comprende a todas las empresas y trabajadores que realizan su actividad, tanto en procesos de fabricación, elaboración o transformación, como en los de montaje, reparación, conservación, mantenimiento, almacenaje o puesta en funcionamiento de equipos e instalaciones industriales, que se relacionen con el Sector del Metal.
        \n\n
        De este modo, quedan integradas en el campo de aplicación de este Convenio las siguientes actividades y productos: metalurgia, siderurgia; automoción y sus componentes; construcción naval y su industria auxiliar; industria aeroespacial y sus componentes, así como material ferroviario, componentes de energías renovables; robótica, domótica, automatismos y su programación, ordenadores y sus periféricos o dispositivos auxiliares; circuitos impresos e integrados y artículos similares; infraestructuras tecnológicas; equipos y tecnologías de telecomunicaciones y de la información; y todo tipo de equipos, productos y aparatos mecánicos, eléctricos o electrónicos
        \n\n
        Forman parte también de dicho ámbito las empresas dedicadas a la ingeniería, servicios técnicos de ingeniería, análisis, inspección y ensayos, fabricación, montaje y/o mantenimiento, que se lleven a cabo en la industria y en las plantas de generación de energía eléctrica, petróleo, gas y tratamiento de aguas; así como, las empresas dedicadas a tendidos de líneas de conducción de energía, de cables y redes de telefonía, informática, satélites, señalización y electrificación de ferrocarriles, instalaciones eléctricas y de instrumentación, de aire acondicionado y frio industrial, fontanería, calefacción y otras actividades auxiliares y/o complementarias del Sector.
        \n\n
        Asimismo, se incluyen las actividades de soldadura y tecnologías de unión, calorifugado, grúas-torre, placas solares, y las de joyería, relojería o bisutería; juguetes; cubertería y menaje; cerrajería; armas; aparatos médicos; industria óptica y mecánica de precisión; lámparas y aparatos eléctricos; conservación, corte y reposición de contadores y lectores de contadores eléctricos; recuperación y reciclaje de materias primas secundarias metálicas, así como aquellas otras actividades específicas y/o complementarias del Sector.
        \n\n
        Igualmente, se incluyen las actividades de fabricación, instalación, mantenimiento o montaje de equipamientos industriales, carpintería metálica, calderería, mecanización y automatización, incluidas en el sector o en cualquier otro que requiera tales servicios, así como la limpieza de maquinaria industrial.

    </string>
    <string name="boton_convenio">Descargar convenio</string>
    <string name="title_activity_trabajos_pendientes">Trabajos pendientes</string>
    <string name="textView_lista">Lista de trabajos pendientes</string>
    <string name="label_trabajo">Tareas pendientes</string>
    <string name="label_trabajos_pendientes">Añadir evento</string>
    <string name="label_descripcion_trabajo">Descripción del trabajo</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="breve_descripcion">Breve descripción del trabajo pendiente</string>
    <string name="boton_anhadir">Añadir evento</string>
    <string name="label_cliente">Cliente</string>
    <string name="label_listado">Listado de trabajos pendientes</string>
    <string name="toast_anhadirEvento">Primero debes rellenar los campos</string>
    <string name="toast_anhadirEvento1">Introduce una descripción del trabajo</string>
    <string name="title_activity_parte_horas">Parte de horas</string>
    <string name="label_fecha">FECHA</string>
    <string name="label_hora_inicio">HORA INICIO</string>
    <string name="label_hora_fin">HORA FIN</string>
    <string name="label_descripcion">DESCRIPCIÓN</string>
    <string name="boton_anadir_parte">Añadir entrada al parte de horas</string>
    <string name="no_entradas_viewholder">No hay entradas</string>
    <string name="toast_acitivity_result">No se ha guardado la entrada</string>
    <string name="toast_activity_update_result">No se ha podido actualizar la entrada</string>
    <string name="title_activity_settings">Preferencias</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Mostrar nombre</string>
    <string name="pref_default_display_name">Froilán Caamaño</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Sincronización</string>

    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_parte_horas">Introduce los datos</string>
    <string name="desc_canal_parte_horas">Notificación diaria como recordatorio de cubrir el parte de horas</string>
    <string name="nombre_canal_parte_horas">Notificación partes de horas</string>
</resources>
